setting up nav.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
      <title>gh battle</title>
-    <link rel="icon" type="image/png" sizes="32x32" 
+    <link 
+    rel="icon" 
+    type="image/png" 
+    sizes="32x32" 
     href="https://tylermcginnis.com/images/favicon/favicon-32x32.png">
 </head>
 <body>
